2006-07-20  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* alloc.c (pure_bytes_used_lisp, pure_bytes_used_non_lisp): New	vars.
	(init_alloc_once): Initialize them.
	(pure_alloc): Allocate non-Lisp objects from the end of pure storage
	without alignment.

	* puresize.h (BASE_PURESIZE): Decrease to 1141000.

2006-07-18  Francis Litterio  <franl@world.std.com>

	* w32term.c (x_calc_absolute_position): Fix frame positioning
	with negative X/Y coordinates.

2006-07-18  Dan Nicolaescu  <dann@ics.uci.edu>

	* xterm.c (x_connection_closed, x_error_quitter): Mark as NO_RETURN.

	* textprop.c (text_read_only): Likewise.

	* lread.c (end_of_file_error): Likewise.

	* lisp.h (circular_list_error, memory_full, buffer_memory_full):
	Likewise.

	* eval.c (unwind_to_catch): Likewise.

	* buffer.h (buffer_slot_type_mismatch): Likewise.

2006-07-18  Kim F. Storm  <storm@cua.dk>

	Cleanup Fsignal calls that never returns; now only use it for Qquit.

	* eval.c (xsignal): New func.  Like Fsignal, but marked no-return.
	(xsignal0, xsignal1, xsignal2, xsignal3): New no-return functions.
	(signal_error): New no-return function (from xfaces.c).
	(Fthrow): Use xsignal2 instead of Fsignal + abort.
	(error): Use xsignal1 instead of Fsignal + abort.
	(FletX, Flet, grow_specpdl): Use signal_error.
	(Feval, Ffuncall, funcall_lambda): Use xsignal1, xsignal2.

	* alloc.c (buffer_memory_full, memory_full): Use xsignal. Remove loop.
	(list1): New function.

	* lisp.h (list1): Add EXFUN.
	(xsignal, xsignal0, xsignal1, xsignal2, xsignal3, signal_error):
	Add prototypes.  Mark them as no-return.

	* buffer.c (Fbuffer_local_value, Fbarf_if_buffer_read_only):
	Use xsignal1.

	* callint.c (check_mark): Use xsignal0.

	* casefiddle.c (casify_object): wrong_type_argument is no-return.

	* cmds.c (Fforward_char, Fdelete_char): Use xsignal0.

	* coding.c (Fcheck_coding_system): Use xsignal1.  Remove loop.
	(Fdefine_coding_system_internal): Use xsignal1.

	* data.c (circular_list_error): Use xsignal.